# openseeface-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md
demo/: Cargo.toml
demo/src/: features.rs  inspector.rs  main.rs
models/: lm_model0_opt.onnx  lm_model1_opt.onnx  lm_model2_opt.onnx  lm_model3_opt.onnx  lm_model4_opt.onnx  lm_modelT_opt.onnx  lm_modelU_opt.onnx  lm_modelV_opt.onnx  mnv3_detection_opt.onnx  mnv3_gaze32_split_opt.onnx  retinaface_640x640_opt.onnx
src/: face.rs  geometry.rs  image.rs  lib.rs  protocol.rs  retinaface.rs  sqpnp.rs  tracker.rs
src/features/: arkit.rs  mod.rs  openseeface.rs
src/protocol/: mod.rs  openseeface.rs
tracker/: Cargo.toml
tracker/src/: main.rs
