[package]
name = "openseeface"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
tracing = "0.1.41"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
glam = { version = "0.29.2", features = ["serde"] }
ndarray = { version = "0.16.1", features = ["serde"] }
ort = { version = "2.0.0-rc.9", features = ["ndarray"] }
remedian = "0.1.0"
similari = "0.26.2"
nokhwa = "0.10.7"
nokhwa-bindings-linux = "0.1.1"
image = "0.25.5"

[workspace]
members = [ "demo",
    "tracker"
]
