[package]
name = "openseeface"
description = "Rust port of the OpenSeeFace face-tracking engine"
authors = ["Erica Taylor <rickytaylor26@gmail.com>"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
keywords = ["cv", "face", "tracking", "openseeface"]
categories = ["computer-vision"]

[dependencies]
byteorder = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
glam = { workspace = true, features = ["serde"] }
ndarray = { workspace = true, features = ["serde"] }
ort = { workspace = true, features = ["ndarray"] }
remedian = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
sqpnp = { workspace = true }

[profile.dev]
opt-level = 1

[profile.dev.package."openseeface"]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "2"
members = [
    "demo",
    "tracker"
]

[workspace.dependencies]
anyhow = "1.0.95"
clap = "4.5.26"
byteorder = "1.5.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-tracy = "0.11.4"
serde = "1.0.217"
serde_json = "1.0.135"
glam = "0.29.2"
ndarray = "0.16.1"
ort = "2.0.0-rc.9"
remedian = "0.1.0"
image = "0.25.5"
imageproc = "0.25.0"
sqpnp = "0.1.0"
crossbeam-channel = "0.5.14"
ctrlc = "3.4.5"
nokhwa = "0.10.7"
