[package]
name = "openseeface-demo"
version = "0.1.0"
description = "openseeface-rs demo"
authors = ["Erica Taylor <rickytaylor26@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[dependencies]
openseeface = { path = ".." }
tracing = { workspace = true, features = ["release_max_level_debug"] }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
byteorder = { workspace = true }
crossbeam-channel = { workspace = true }
nokhwa = { workspace = true, features = ["input-native", "output-threaded"] }
image = { workspace = true }
bevy = "0.15.1"
bevy_egui = "0.31.1"
bevy-inspector-egui = "0.28.1"
