[package]
name = "openseeface-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
openseeface = { path = ".." }
clap = { version = "4.5.26", features = ["derive"] }
anyhow = "1.0.95"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
tracing-tracy = { version = "0.11.4", optional = true }
crossbeam-channel = "0.5.14"
ctrlc = "3.4.5"
nokhwa = { version = "0.10.7", features = ["input-native", "output-threaded"] }
image = "0.25.5"

[features]
tracing = ["dep:tracing-tracy"]
