[package]
name = "openseeface-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
openseeface = { path = ".." }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }
tracing-tracy = { workspace = true, optional = true }
crossbeam-channel = { workspace = true }
byteorder = { workspace = true }
glam = { workspace = true }
ctrlc = { workspace = true }
nokhwa = { workspace = true, features = ["input-native", "output-threaded"] }
image = { workspace = true }

[features]
tracing = ["dep:tracing-tracy"]
